src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Mobile__c</fullName>
        <description>Second mobile phone number of the customer</description>
        <label>Second Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Smart_Account_Owner__c</fullName>
        <description>This field is only required if Dealer also sell Smart Car. This field can only be updated by dedicated user.</description>
        <label>Smart Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Account__c</fullName>
        <description>Required by business during the workshop, which exists in current avarto system (客户社区帐号)。</description>
        <label>Social Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Care__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Special requirement of the individual if any 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_SpecialCare&quot;</description>
        <label>Special Care</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Current status of the person in relation to Daimler 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_CustomerStatus&quot;</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Academy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Data_Source__c</fullName>
        <description>/*
Created by: Lio Huang
Used by: Integration
Function: This field will not be in any page layout, read only for all profile as it is updated by integration.
Used in: Integration

Modify History
Modify By:
Modify Reason:
*/</description>
        <label>System Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Salutation to client (in personal contact or via mail) 
Used in: Page Layouts, Reports 

Modify History: March 1st
Modify By: Lio Huang
Modify Reason: Changed the values between Title and salutation, also removed the prefix &quot;Contact_&quot;
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Salutation&quot;</description>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Dear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Whom It May Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sir</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdatedByEpTransactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>UpdatedByEpTransactions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Amount__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of cars in household 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_VehicleAmount&quot;</description>
        <label>Vehicle Amount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Zip Code (Post Code) of customer&apos;s address 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_ZipCode&quot;</description>
        <label>ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Province__c</columns>
        <columns>City_CN__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>All Customer Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FilteredDealersOgg</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Dealer_Active__c</columns>
        <columns>Dealer_GS_Code__c</columns>
        <columns>Dealer_ND_Code__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>UpdatedByEpTransactions__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dealer_GS_Code__c</field>
            <operation>equals</operation>
            <value>GS0003480</value>
        </filters>
        <filters>
            <field>Dealer_ND_Code__c</field>
            <operation>equals</operation>
            <value>NDLL10</value>
        </filters>
        <filters>
            <field>Dealer_GS_Code__c</field>
            <operation>equals</operation>
            <value>GS0003479</value>
        </filters>
        <filters>
            <field>Dealer_ND_Code__c</field>
            <operation>equals</operation>
            <value>NBJI10</value>
        </filters>
        <label>FilteredDealersOgg</label>
        <language>en_US</language>
        <sharedTo>
            <groups>Daimler CRM Team</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Suspect_Duplicates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>DUP_Nummer__c</columns>
        <columns>Dupe_Merge__c</columns>
        <columns>Master_Record__c</columns>
        <columns>Dup_Reason__c</columns>
        <columns>Dupe_Reject__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dup_Reason__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Suspect Duplicates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Suspected_Duplicate_Customers</fullName>
        <columns>Master_Record__c</columns>
        <columns>DUP_Nummer__c</columns>
        <columns>Dup_Reason__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>Second_Mobile__c</columns>
        <columns>PC_PHONE4</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Province__c</columns>
        <columns>City_CN__c</columns>
        <columns>Primary_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>DUP_Nummer__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Suspected Duplicate Customers</label>
        <language>en_US</language>
    </listViews>
    <namedFilters>
        <fullName>Account_00NO0000000jtLnMAI</fullName>
        <active>true</active>
        <field>Account.Latest_Sales_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Latest Sales Dealers (Account)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NO0000000jtM2MAI</fullName>
        <active>true</active>
        <field>Account.Latest_Service_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Latest Service Dealers (Account)</name>
    </namedFilters>
    <namedFilters>
        <fullName>Account_00NO0000000jtM7MAI</fullName>
        <active>true</active>
        <field>Account.Main_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Main Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00NO0000000jtt7MAA</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Case.Case_Complainant__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account Retail Copy</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account Wholesale</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Case Complainant</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00NO0000000jtzAMAQ</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>Case.Car_Owner__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account Retail Copy</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account Wholesale</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Car Owner</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00NO0000000jtzyMAA</fullName>
        <active>true</active>
        <field>Case.Case_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00NN0000000UqYjMAK</fullName>
        <active>false</active>
        <field>Lead.Contact__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Account Name</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00NN0000000UqqEMAS</fullName>
        <active>true</active>
        <field>Lead.Preferred_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Preferred Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000CrmdMAC_00NN0000000UkhSMAS</fullName>
        <active>true</active>
        <field>Aftersales__c.Service_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Aftersales_Service Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000CrmdMAC_00NN0000000UpFgMAK</fullName>
        <active>true</active>
        <field>Aftersales__c.Service_Contact__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Aftersales_Service_Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000CrmwMAC_00NN0000000Ukh8MAC</fullName>
        <active>true</active>
        <field>Participating_Dealer__c.Dealer__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Participating Dealer_Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000Crn0MAC_00NN0000000UkjCMAS</fullName>
        <active>true</active>
        <field>SMS__c.Dealer__c</field>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>SMS_Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000Crn2MAC_00NN0000000UkjOMAS</fullName>
        <active>true</active>
        <field>Sales__c.Sales_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales_Sales Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000Crn4MAC_00NN0000000UkjfMAC</fullName>
        <active>true</active>
        <field>Vehicle_Relationship__c.Contact__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Vehicle Relationship_Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000004f8yMAA_00NO0000000jzmLMAQ</fullName>
        <active>true</active>
        <field>Sales__c.Sales_Contact__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales_Sales Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000004fBEMAY_00NO0000000jtyQMAQ</fullName>
        <active>true</active>
        <field>Vehicle_Relationship__c.Last_Service_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Vehicle Relationship_Last Service Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000004fBEMAY_00NO0000000jtyfMAA</fullName>
        <active>true</active>
        <field>Vehicle_Relationship__c.Selling_Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Vehicle Relationship_Selling Dealer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IO00000004freMAA_00NO0000000k5cWMAQ</fullName>
        <active>false</active>
        <field>Dealer_Offering__c.Dealer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Dealer Offering_Dealer</name>
    </namedFilters>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Record type for dealer</description>
        <label>Dealer</label>
    </recordTypes>
    <validationRules>
        <fullName>CP_Contact_Background_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu
Used by:  US-CP-001
Function: 
1. CP means Contact Portfolio 
2. Contact Backgroud can only be filled, if Gov Background is flaged. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	RecordType.Name = &apos;Person Account&apos;,
	Gov_Background__c = false,
	
	AND (
		NOT(ISNULL(Contact_Background__c)),
		NOT(ISBLANK(Contact_Background__c))
	)
)</errorConditionFormula>
        <errorMessage>If Gov Background is not flaged, Contact Background could&apos;t be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CP_Customer_Phone_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu
Used by: Person Account Record Type (US-CP-001)
Function: 1. At least 1 customer must have at least one phone field populated
		  2. CP means Contact Portfolio 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	OR (
		ISNULL(Phone),
		ISBLANK(Phone)
	),
	
	OR (
		ISNULL(Second_Mobile__c),
		ISBLANK(Second_Mobile__c)
	),
	
	OR (
		ISNULL(PersonHomePhone),
		ISBLANK(PersonHomePhone)
	),
	
	OR (
		ISNULL(PersonMobilePhone),
		ISBLANK(PersonMobilePhone)
	)
)</errorConditionFormula>
        <errorMessage>Customer must have at least one phone field populated.</errorMessage>
    </validationRules>
</CustomObject>